# Laukey

./: .env  LICENSE  README.md  documentation.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: firefox-pass-converter.sh  linux-install.sh
src/: App.css  App.tsx  laukey.ts  store.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make-icons.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/LibLaukey/: csv.rs  db.rs  key.rs  mod.rs  pass_encrypt.rs
src-tauri/src/lib_laukey/: csv.rs  db.rs
src/Components/: Laukey.tsx
src/components/: AddPasswords.tsx  MasterKeyGate.tsx  Passwords.tsx  PasswordsCard.tsx  SettingsModal.tsx  Sitename.tsx  Toast.tsx
src/pages/: Homepage.tsx  Passwords.tsx
src/utils/: checkUpdate.ts  getLogo.ts  getSiteName.ts  getSitePasswords.ts  test.ts  theme.ts
