[package]
name = "Laukey"
version = "0.1.0"
description = "Password Manager"
authors = ["CYCNO"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "laukey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
csv = "1.3.0"
tauri-plugin-dialog = "2"
rfd = "0.12"
dirs = "5.0"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
anyhow = "1.0"
keyring = "2"         # v2 is the latest
base64 = "0.21"
tauri-plugin-shell = "2"
dotenv = "0.15" 
once_cell = "1.21.3"
zeroize = "1.8.1"
