[package]
name = "laukey"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "laukey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
#lib laukey
serde = { version = "1", features = ["derive"] }
argon2 = "0.5.3"
dirs="6"
serde_json = "1.0.150"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
aes-gcm = "0.10.3"
rand = "0.9"
base64 = "0.22"
sha2 = "0.11.0"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
csv = "1"
directories = "5.0"
tokio = { version = "1", features = ["full"] }
